# bamm

./: .gitignore  AUTHORS  CMakeLists.txt  CNAME  ChangeLog.txt  Makefile  README.md  advanced.html  announcements.html  bammgraph.html  changes.html  colorbreaks.html  configuration.html  configuration_speciation.html  configuration_trait.html  contact_us.html  developertoggle.html  divcontrolconfiguration.html  documentation.html  download.html  faq.html  fossilbamm.html  genindex.html  glossary.html  index.html  installation.html  introduction.html  likelihoodmodel.html  makebamm.sh  makebammtrait.sh  mc3.html  mea_likelihood.html  objects.inv  ouput.html  output.html  postprocess.html  prior.html  quickstart.html  rateshifts.html  replication.html  (+11 more)
BAMMtools/: DESCRIPTION  NAMESPACE
BAMMtools/R/: BAMMtools-internal.R  addBAMMlegend.R  as.phylo.branchprior.R  assignColorBreaks.R  bammLikelihood.R  bammcolors.R  generateControlFile.R  getCladeRates.R  getEventData.R  getJenksBreaks.R  plot.bammdata.R  plotPrior.R  setBAMMpriors.R  summary.branchprior.R  traitDependentBAMM.R
BAMMtools/data/: events.fishes.rda  events.primates.rda  events.whales.rda  fishes.rda  mcmc.primates.rda  mcmc.whales.rda  primates.rda  traits.fishes.rda  whales.rda
BAMMtools/inst/: CITATION
BAMMtools/man/: BAMMlikelihood.Rd  BAMMtools-data.Rd  BAMMtools-internal.Rd  BAMMtools-package.Rd  ShiftProbsTree.Rd  addBAMMlegend.Rd  addBAMMshifts.Rd  assignColorBreaks.Rd  cohorts.Rd  computeBayesFactors.Rd  credibleShiftSet.Rd  distinctShiftConfigurations.Rd  generateControlFile.Rd  getBestShiftConfiguration.Rd  getBranchShiftPriors.Rd  getEventData.Rd  getJenksBreaks.Rd  getRateThroughTimeMatrix.Rd  getTipRates.Rd  marginalOddsRatioBranches.Rd  plot.bammdata.Rd  plot.bammshifts.Rd  plot.credibleshiftset.Rd  plotRateThroughTime.Rd  ratesHistogram.Rd  samplingProbs.Rd  setBAMMpriors.Rd  speciesByRatesMatrix.Rd  subsetEventData.Rd  subtreeBAMM.Rd  summary.bammdata.Rd  summary.branchprior.Rd  summary.credibleshiftset.Rd  testTimeVariableBranches.Rd  traitDependentBAMM.Rd  writeEventData.Rd
BAMMtools/src/: cohort_matrix.c  dtrates.c  jenksBrks.c  symbols.rds  treetraverse.c
Rcode/: BAMM_TreeSummaryFxns.R  BAMM_TreeSummary_Script.R  BAMM_postprocess_script.R  Load_BAMMtools.R  autotune_BAMM_MCMC.R  computeBayesFactors.R  dtRatesTreeFxns.R  dtRatesTreeScript.R  dtrates.c  oz_spheno_mcc216.tre  plot.dtrates.R  process_BAMM_fxns.R  squamtree.tre
Rcode/BAMMtools/: BAMMtools.R  addBAMMshifts.R  addShiftNodes.R  arc.R  as.phylo.bammdata.R  branchMeanRateExponential.R  colorMap.R  computeBayesFactors.R  computeJointShiftCorrelations.R  cumulativeShiftProbsTree.R  dtRates.R  exponentialRate.R  getBySpeciesRateMatrix.R  getCladeRates.R  getEventCorrelationMatrix.R  getEventData.R  getMarginalBranchRateMatrix.R  getMeanBranchLengthTree.R  getMeanTipRateStates.R  getRateThroughTimeMatrix.R  getRecursiveSequences.R  getSampleCoMat.R  getSampleDistanceMatrixBAMM.R  getShiftNodesFromIndex.R  getSpeciesRateThroughTime.R  getSpeciesRateThroughTimeReturnAll.R  histRates.R  loadBAMMtools.R  marginalShiftProbsTree.R  maximumShiftCredibilityTree.R  mkdtsegs.R  plot.bammdata.R  plot.dtrates.R  plotRateThroughTime.R  plotSpeciesRatesThroughTime.R  print.bammdata.R  safeCompare.R  segMap.R  setPhyloTreeCoords.R  setPolarTreeCoords.R  (+5 more)
Rcode/BAMMtools_skeleton/: DESCRIPTION
Rcode/bammtools_newfxns/: computeJointShiftCorrelations.R  distinctShiftConfigurations.R  getEventCorrelationMatrix.R  getSampleCorrelationMatrix.R  plot.bammshifts.R  (+3 more)
_downloads/: MEA_analysis_functions.R  MEA_conditioning_example.R  MonteCarloLikelihood_MOD.R  cetaceans_polarRateTree.R  distinctShifts.R  divcontrol_template.txt  plot_multishift.R  primate_bodysize.R  template_diversification.txt  template_trait.txt
_sources/: advanced.rst.txt  advanced.txt  announcements.rst.txt  bammgraph.txt  changes.txt  colorbreaks.rst.txt  colorbreaks.txt  configuration.rst.txt  configuration.txt  configuration_trait.txt  contact_us.rst.txt  contact_us.txt  developertoggle.txt  documentation.rst.txt  documentation.txt  download.rst.txt  download.txt  faq.txt  fossilbamm.rst.txt  glossary.txt  index.rst.txt  index.txt  installation.txt  introduction.rst.txt  introduction.txt  likelihoodmodel.txt  mc3.txt  mea_likelihood.txt  postprocess.txt  prior.txt  quickstart.txt  rateshifts.txt  replication.txt  settingup.txt  sometheory.txt  strapp.rst.txt  testingbamm.rst.txt  time-flip.rst.txt  troubleshooting.txt
controlfiles/: divcontrol.txt  divcontrol_template.txt  traitcontrol.txt
diversification/: TraitBranchHistory.h  TraitMCMC.cpp  TraitMCMC.h  TraitModel.cpp  TraitModel.h  Utilities.h  branchHistory.cpp  event.h  main.cpp  mcmc.h  model.cpp  testbamm.sh
doc/: Makefile
problems/: acanthurid.tre  balistoidae.tre  tetraodontidae.tre
skeleton/: .Rapp.history
src/: .MCMC.cpp.swp  AcceptanceDataWriter.cpp  AcceptanceDataWriter.h  Autotune.cpp  Autotune.h  BetaInitProposal.cpp  BetaInitProposal.h  BetaShiftProposal.cpp  BetaShiftProposal.h  BetaTimeModeProposal.cpp  BetaTimeModeProposal.h  BranchEvent.cpp  BranchEvent.h  BranchHistory.cpp  BranchHistory.h  ChainSwapDataWriter.cpp  ChainSwapDataWriter.h  CommandLineProcessor.cpp  CommandLineProcessor.h  Config.cpp  ConfigFileReader.cpp  DataWriter.cpp  DataWriter.h  EventCountLog.cpp  EventCountLog.h  EventDataWriter.cpp  EventDataWriter.h  EventNumberForBranchProposal.cpp  EventNumberForBranchProposal.h  EventNumberProposal.cpp  EventNumberProposal.h  EventParameterProposal.cpp  EventParameterProposal.h  EventRateProposal.cpp  EventRateProposal.h  FastSimulatePrior.cpp  FastSimulatePrior.h  FossilData.cpp  FossilData.h  LambdaInitProposal.cpp  (+98 more)
tests/: CommandLineProcessorTest.cpp  Makefile  NodeTest.cpp  test-all
tools/: chain-swap-percent.sh  chainSwapPercent.R  fix-authors.py  generate-authors.sh  generate-authors_copy.sh
traits/: MbRandom.cpp  Settings.cpp  Settings.h  TraitEvent.cpp  TraitMCMC.cpp  TraitMCMC.h  TraitModel.cpp  TraitModel.h  main.cpp  makefile  mcmc.cpp  mcmc.h  model.cpp  model.h  node.cpp
(+433 files in other folders)
