CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(BAMM C CXX)

SET(BAMM_VERSION 2.5.0)
SET(BAMM_VERSION_DATE 2015-11-01)

# Specify executable and source files
AUX_SOURCE_DIRECTORY(src BAMM_SRC)
ADD_EXECUTABLE(bamm ${BAMM_SRC})

# Specify flags according to compiler
IF(${CMAKE_CXX_COMPILER_ID} MATCHES Clang)
    SET(CMAKE_CXX_FLAGS "-g -Wall -Wextra -O3 -std=c++11 -stdlib=libc++")
    SET(CMAKE_EXE_LINKER_FLAGS "-stdlib=libc++")
ELSEIF(${CMAKE_CXX_COMPILER_ID} MATCHES GNU)
    IF(${CMAKE_CXX_COMPILER_VERSION} VERSION_LESS 4.6.3)
        MESSAGE(FATAL_ERROR "GCC version must be >= 4.6.3")
    ELSEIF(${CMAKE_CXX_COMPILER_VERSION} VERSION_LESS 4.7)
        SET(CMAKE_CXX_FLAGS "-g -Wall -Wextra -O3 -std=c++0x")
    ELSE()
        SET(CMAKE_CXX_FLAGS "-g -Wall -Wextra -O3 -std=c++11")
    ENDIF()
    FIND_PACKAGE(Threads REQUIRED)
    IF(Threads_FOUND)
        TARGET_LINK_LIBRARIES (bamm ${CMAKE_THREAD_LIBS_INIT})
    ENDIF()
ELSEIF(${CMAKE_CXX_COMPILER_ID} MATCHES MSVC)
    SET(CMAKE_CXX_FLAGS "/W4")
ENDIF()

# Provide BAMM version to the compiler
ADD_DEFINITIONS(-DBAMM_VERSION=\"${BAMM_VERSION}\")
ADD_DEFINITIONS(-DBAMM_VERSION_DATE=\"${BAMM_VERSION_DATE}\")

# Set Git commit id
EXECUTE_PROCESS(COMMAND "git" "rev-parse" "HEAD"
    OUTPUT_VARIABLE GIT_COMMIT_ID
    OUTPUT_STRIP_TRAILING_WHITESPACE)
ADD_DEFINITIONS(-DGIT_COMMIT_ID=\"${GIT_COMMIT_ID}\")

INSTALL(TARGETS bamm RUNTIME DESTINATION bin)
